infrastructure/configs/staging/cilium/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: lan-gateway
  labels:
    lan-gateway: "true"
