infrastructure/configs/staging/cilium/hubble-ui-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: lan-gateway
spec:
  parentRefs:
    - name: lan-gateway
      namespace: lan-gateway
      sectionName: lan-https
  hostnames:
    - "hubble.raymondcollazo.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          namespace: kube-system
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: hubble-ui-from-lan-gateway
  namespace: kube-system
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: lan-gateway
  to:
    - group: ""
      kind: Service
      name: hubble-ui
